--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,30 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      - name: Run brew test-bot
+      - name: Setup Homebrew & Tap
         run: |
           set -e
           brew update
-          HOMEBREW_TAP_DIR="$(brew --repo Bo98/dotnet)"
+          HOMEBREW_TAP_DIR="$(brew --repo ${{github.repository}})"
           mkdir -p "$HOMEBREW_TAP_DIR"
           rm -rf "$HOMEBREW_TAP_DIR"
           ln -s "$PWD" "$HOMEBREW_TAP_DIR"
+      - name: Run brew test-bot
+        run: |
+          mkdir bottles
+          cd bottles
           brew test-bot
+      - name: Count bottles
+        id: bottles
+        if: always()
+        run: |
+          cd bottles
+          count=$(ls *.json | wc -l | xargs echo -n)
+          echo "$count bottles"
+          echo "::set-output name=count::$count"
+      - name: Upload bottles
+        if: always() && steps.bottles.outputs.count > 0
+        uses: actions/upload-artifact@v1
+        with:
+          name: bottles
+          path: bottles
